if(BUILD_ANASAZI)
  include_directories(${ANASAZI_INCLUDE_DIR})
  set(TESTS xyz_crs_mpi xyz_matfree_mpi mvtest)
  foreach(name ${TESTS})
    set(target_name sample_anasazi_diagonalize_${name})
    add_executable(${target_name} ${name}.cpp)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
    target_link_libraries(${target_name} rokko)
  endforeach(name)
endif(BUILD_ANASAZI)
