if(BUILD_EIGEN_S)
  include_directories(${name} ${PROJECT_BINARY_DIR}/3rd-party/eigen_s)
  set(TESTS2 diagonalize_general diagonalize_eigen_s)
  foreach(name ${TESTS2})
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} rokko)
  endforeach(name)
endif(BUILD_EIGEN_S)

if(BUILD_EIGEN_SX)
  include_directories(${name} ${PROJECT_BINARY_DIR}/3rd-party/eigen_sx)
  set(TESTS2 diagonalize_eigen_sx)
  foreach(name ${TESTS2})
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} rokko)
  endforeach(name)
endif(BUILD_EIGEN_SX)
