include_directories(${PROJECT_SOURCE_DIR}/rokko)
include_directories(${PROJECT_BINARY_DIR}/rokko)
include_directories(${PROJECT_SOURCE_DIR}/rokko_c-fortran)
include_directories(${PROJECT_BINARY_DIR}/rokko_c-fortran)
include_directories(${MPI_Fortran_INCLUDE_PATH})

set(SAMPLE frank)
foreach(name ${SAMPLE})
  set(target_name sample_fortran_${name})
  add_executable(${target_name} ${name}.f90)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} rokko ${ELEMENTAL_LIBRARIES} ${ELPA_LIB} ${SCALAPACK_LIB} ${MPI_Fortran_LIBRARIES})
  SET_TARGET_PROPERTIES(${target_name} PROPERTIES LINKER_LANGUAGE CXX)
endforeach(name)

set(SAMPLE frank_function frank_array frank_array_all_gather set_distributed_matrix)
foreach(name ${SAMPLE})
  set(target_name sample_fortran_${name})
  add_executable(${target_name} ${name}.F90)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} rokko ${ELEMENTAL_LIBRARIES} ${ELPA_LIB} ${SCALAPACK_LIB} ${MPI_Fortran_LIBRARIES})
  SET_TARGET_PROPERTIES(${target_name} PROPERTIES LINKER_LANGUAGE CXX)
endforeach(name)

