if(BUILD_SLEPC)
  include_directories(${SLEPC_INCLUDE_DIR} ${PETSC_INCLUDE_DIR})
  set(TESTS frank_matfree_1proc heisenberg_crs_mpi heisenberg_matfree_1proc heisenberg_matfree_mpi xyz_crs_mpi xyz_matfree_mpi)
  # set(TESTS heisenberg_matfree_mpi_try2 heisenberg_matfree_1proc_try ${TESTS})

  foreach(name ${TESTS})
    set(target_name sample_slepc_diagonalize_${name})
    add_executable(${target_name} ${name}.cpp)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
    target_link_libraries(${target_name}  ${SLEPC_LIBRARIES} ${PETSC_LIBRARIES} ${MPI_CXX_LIBRARIES})
  endforeach(name)
endif(BUILD_SLEPC)
