set(PROG eigen_s eigen_sx)
foreach(name ${PROG})
  set(target_name example_eigenexa_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} rokko m)
  add_test(${name}-4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${name})
  add_test(${name} ${name})
endforeach(name)
unset(PROG)

set(PROG eigen_s_c eigen_sx_c)
foreach(name ${PROG})
  set(target_name example_eigenexa_${name})
  add_executable(${target_name} ${name}.c)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} rokko m)
  add_test(${name}-4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${name})
  add_test(${name} ${name})
endforeach(name)
unset(PROG)

if(BUILD_Fortran_BINDING)
  set(PROG eigen_s_f eigen_sx_f)
  foreach(name ${PROG})
    set(target_name example_eigenexa_${name})
    add_executable(${target_name} ${name}.f90)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
    target_link_libraries(${target_name} rokko)
    add_test(${name}-4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${name})
    add_test(${name} ${name})
  endforeach(name)
  unset(PROG)
endif(BUILD_Fortran_BINDING)
