set(PROG elpa)
include_directories(${ELPA_INCLUDE_DIR})
foreach(name ${PROG})
  set(target_name example_elpa_${name})
  add_executable(${target_name} ${name}.cpp)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  target_link_libraries(${target_name} rokko m)
  #target_include_directories(${target_name} PUBLIC ${ELPA_INCLUDE_DIR}/modules)
  add_test(${name}-4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${name})
  add_test(${name} ${name})
endforeach(name)
unset(PROG)
